# sender_policy_flattener

./: .gitignore  Dockerfile  README.md  TODO.md  compose.yml  pyproject.toml
example/: settings_example.json
sender_policy_flattener/: __init__.py  __main__.py  cli.py  crawler.py  email_utils.py  formatting.py  handlers.py
sender_policy_flattener/test/: dns_mocks.py  email_fmts.py
tests/: test_sender_policy_flattener.py
