[tool.poetry]
name = "sender_policy_flattener"
version = "0.3.2"
description='Condense SPF records to network blocks to avoid DNS Lookup Limits'
authors = ["Vasili Syrakis <cetanu@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: 3.12',
    'Topic :: Internet :: Name Service (DNS)',
    'Topic :: System :: Systems Administration',
    'Topic :: Utilities',
    'Intended Audience :: System Administrators',
    'Natural Language :: English',
]
keywords=['spf', 'dns', 'sender policy framework']
repository='https://github.com/cetanu/sender_policy_flattener'

[tool.poetry.scripts]
spflat = 'sender_policy_flattener.cli:main'

[tool.poetry.dependencies]
python = "^3.12"
dnspython = "^2.7.0"
netaddr = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest-spec = "^3.2.0"
mock = "^4.0.3"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
