[tool.poetry]
name = "sender_policy_flattener"
version = "0.3.3"
description='Condense SPF records to network blocks to avoid DNS Lookup Limits'
authors = ["Vasili Syrakis <cetanu@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: 3.12',
    'Topic :: Internet :: Name Service (DNS)',
    'Topic :: System :: Systems Administration',
    'Topic :: Utilities',
    'Intended Audience :: System Administrators',
    'Natural Language :: English',
]
keywords=['spf', 'dns', 'sender policy framework']
repository='https://github.com/cetanu/sender_policy_flattener'

[tool.poetry.scripts]
spflat = 'sender_policy_flattener.cli:main'

[tool.poetry.dependencies]
python = "^3.12"
dnspython = "^2.7.0"
netaddr = "^1.3.0"
cloudflare = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest-spec = "^4.0.0"
ruff = "^0.8.2"

[tool.poetry.group.test.dependencies]  
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
